# ai_media_watch

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  fakeface_finguard_student_task.md  finguard_infra_plan.md  finguard_work_plan.md  pyproject.toml
.github/workflows/: ci.yml
apps/: __init__.py
apps/digital_shadow/: README.md  __init__.py  actors.py  app.py  classifier.py  (+15 more)
backend/: Dockerfile  requirements-runtime.txt
core/: README.md  __init__.py
docs/: annotation_guideline.md  asr_kk_findings.md  cross_product_demo.md  dataset_sources.md  digital_shadow_architecture.md  digital_shadow_data_task.md  guide.md  mock_data_task.md  pipeline.md  run.md  services.md  shadow_graph_demo.md  shadow_graph_schema.md  student_guide.md  two_products.md
frontend/: index.html
infra/: docker-compose.yml
notebooks/: fraud_classifier.ipynb
presentation/: digital_shadow.html  digital_shadow_defense.html  finding_report_template.html  index.html
scripts/: ask_afm.py  build_notebook.py  demo_cross_product.py  export_categories_xlsx.py  index_afm_kb.py  install_nvidia_toolkit.sh  itest_http.py  itest_services.py  llm_scenario_gpu.py  process_stop_piramida.py  run_demo.sh  run_fullstack.sh  run_vllm.sh  test_kk_asr.py  test_llm_pipeline.py
src/: build_dataset.py  index_dataset.py  translate_kk.py
tests/: test_core_contract.py  test_regex_extractors.py  test_risk_engine.py  test_shadow_actors.py  test_shadow_collectors.py  test_shadow_demo_clusters.py  test_shadow_metrics.py  test_shadow_paste_abuse.py  test_shadow_path.py  test_shadow_pipeline.py  test_shadow_reputation.py  test_shadow_seen.py  test_shadow_similarity.py
(+94 files in other folders)
