[project]
name = "finguard"
version = "0.1.0"
description = "FakeFace FinGuard — мультимодальная система выявления риск-сигналов мошенничества"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # web / api
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    # llm (vLLM — OpenAI-compatible)
    "openai>=1.54",
    # vector / graph
    "qdrant-client>=1.12",
    "neo4j>=5.25",
    "sentence-transformers>=3.3",
    # media
    "faster-whisper>=1.0",
    "yt-dlp>=2024.11",
    # paddleocr / paddlepaddle ставятся отдельно — см. README (тяжёлая установка)
    "transformers>=5.12.0",
    "numpy>=2.4.6",
    "easyocr>=1.7.2",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=9.23.1.3",
    "openpyxl>=3.1.5",
    "scikit-learn>=1.9.0",
    "gensim>=4.4.0",
    "pandas>=3.0.3",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "nbconvert>=7.17.1",
    "ipykernel>=7.3.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

# Заметка для команды: никаких pip install — только `uv add` / `uv sync`.
# paddleocr/paddlepaddle намеренно не в основных зависимостях: тяжёлые,
# ставятся отдельно тем, кто делает OCR (Студент 4).
